Name:           lio-cjail
Version:        0.1
build-type:     Simple
License:        GPL-2
License-File:   LICENSE
Author:         HAILS team
Maintainer:     Deian Stefan  <deian at cs dot stanford dot edu>
Stability:      experimental
Synopsis:       LIO bindings for the Arch Linux chroot-jail.
Category:       Security
Cabal-Version:  >= 1.6

Description:
  LIO wrappers for "cjail", allowing code to execute arbitrary code in
  a jail. Communication to said process is restricted using
  information flow control as enforced by LIO.
          

Source-repository head
  Type:     git
  Location: ssh://anonymous@gitstar.com/scs/lio-cjail.git

Library
  Build-Depends:
    base        >= 4.5 && < 5
   ,mtl         >= 2.0
   ,containers  >= 0.4.2
   ,bytestring  >= 0.9
   ,process     >= 1.1.0.1
   ,lio         >= 0.9.2.2
   ,cjail       >= 0.1
   ,binary      >= 0.5.0.0

  ghc-options: -Wall -Werror -fno-warn-orphans

  Exposed-modules:
    LIO.CJail
    LIO.CJail.System.Process
    LIO.CJail.System.Process.TCB
